--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,117 @@
-.json
-node_modules
+  
 # Logs
-logs
+Logs
 *.log
-npm-debug.log*
-lerna-debug.log*
+npm-depuração.log*
+fio-depuração.log*
+erro de fio.log*
+lerna-depura.log*
 
-# Dependency directories
-node_modules
+# Relatórios de diagnóstico (https://nodejs.org/api/report.html)
+relatório. [0-9] Eu nãosei o que fazer. [0-9] Eu nãosei o que fazer. [0-9] Eu nãosei o que fazer. [0-9] *.json
+
+# Dados de tempo de execução
+Pids
+*.pid
+*.semente
+*.pid.lock
+
+# Diretório de libs instrumentados gerado pela jscoverage/JSCover
+lib-cov
+
+# Diretório de cobertura usado por ferramentas como istambul
+Cobertura
+*.lcov
+
+# nyc cobertura de teste
+.nyc_output
+
+# Armazenamento intermediário grunhido (https://gruntjs.com/creating-plugins#storing-task-files)
+.grunhido
+
+# Diretório de dependência de Bower (https://bower.io/)
+bower_components
+
+# configuração nóde-waf
+.lock-wscript
+
+# Addons binários compilados (https://nodejs.org/api/addons.html)
+construir/Liberar
+
+# Diretórios de dependência
+node_modules/
 jspm_packages/
-package-lock.json
-package.json/
-./.gitignore
 
+# Diretório de dependência snowpack (https://snowpack.dev/)
+web_modules/
 
-# Optional npm cache directory
+# Cache TypeScript
+*.tsbuildinfo
+
+# Diretório opcional de cache npm
 .npm
 
-# Optional REPL history
+# Cache eslint opcional
+.eslintcache
+
+# Cache de microempaco
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Histórico opcionais de REPL
 .node_repl_history
 
-# Output of 'npm pack'
+# Saída do 'npm pack'
 *.tgz
 
-# dotenv environment variables file
+# Arquivo Yarn Integrity
+.yarn-integrity
+
+# arquivo de variáveis de ambiente dotenv
 .env
 .env.test
 
+# cache de pacote de encomendas (https://parceljs.org/)
+.cache
+.parcela-cache
+
+# Próxima.js construir saída
+.next
+fora
+
+# Nuxt.js construir / gerar saída
+.nuxt
+Dist
+
+# Arquivos Gatsby
+.cache/
+# Comente na linha pública se seu projeto usa Gatsby e não Next.js
+# https://nextjs.org/blog/next-9-1#public-directory-support
+# Público
+
+# vuepress construir saída
+.vuepress/dist
+
+# Diretórios sem servidor
+.serverless/
+
+# Cache FuseBox
+.fusebox/
+
+# Arquivos locais dynamoDB
+.dynamodb/
+
+# Arquivo de porta TernJS
+.tern-port
+
+# Armazena versões VSCode usadas para testar extensões VSCode
+.vscode-teste
+
+# fio v2
+.yarn/cache
+.yarn/desconectado
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
